--- a/notebooks/SSSN/analyze_SSSN_hessian.ipynb
+++ b/notebooks/SSSN/analyze_SSSN_hessian.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -31,7 +33,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "neuron_inds = {'E':0, 'P':1, 'S':2, 'V':3}\n",
@@ -65,7 +69,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "f_mean = 10.\n",
@@ -647,40 +653,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['E']\n",
-      "['E']\n",
-      "['E']\n",
-      "['E']\n",
-      "['E']\n",
-      "['E']\n",
-      "['E']\n",
-      "['E']\n",
-      "['E']\n",
-      "['E']\n",
-      "['E']\n",
-      "['E']\n",
-      "['E']\n",
-      "    alpha  sigma_P_val  type          m\n",
-      "0       E         0.05  rand   7.002126\n",
-      "1       E         0.05  rand   1.468062\n",
-      "2       E         0.05  rand  -3.036311\n",
-      "3       E         0.05  rand  21.854588\n",
-      "4       E         0.05  rand  20.821730\n",
-      "..    ...          ...   ...        ...\n",
-      "195     E         0.35  rand  12.174648\n",
-      "196     E         0.35  rand  23.949996\n",
-      "197     E         0.35  rand  30.805124\n",
-      "198     E         0.35  rand  32.652222\n",
-      "199     E         0.35  rand  -0.575095\n",
-      "\n",
-      "[2600 rows x 4 columns]\n"
+     "ename": "NameError",
+     "evalue": "name 'sigma_P_vals' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-2bf9bc42f8af>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdfs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msigma_P_val\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msigma_P_vals\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malphas\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;31m#dfs.append(pd.DataFrame({'alpha':alphas, 'sigma_P_val':sigma_P_val, 'type':'hess', 'm':ms[(1*i):(1*(i+1))]}))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malpha\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malphas\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sigma_P_vals' is not defined"
      ]
     }
    ],
